--- a/style.css
+++ b/style.css
@@ -40,10 +40,6 @@ hr{
     margin-left: 30px;
 }
 /* recipes */
-.recipe-first{
-    display: flex;
-    justify-content: space-between;
-}
 .recipe{
     margin-top: 70px;
 }
@@ -51,14 +47,17 @@ hr{
     font-size: 30px;
     margin-bottom: 40px;
 }
-.recipe-first{
+.recipe-card{
+    width: 390px;
+    height: 390;
+}
+.recipes-cards-part{
     display: flex;
     justify-content: space-between;
     margin-bottom: 80px;
 }
-.recipe-card{
-    width: 390px;
-    height: 50%;
+.recipe img{
+    height:250px
 }
 
 /* footer part */
