--- a/style.css
+++ b/style.css
@@ -13,6 +13,21 @@ header{
 .search{
     margin-right: 10px;
 }
+/* when logined */
+.login.unlogined{
+    display: none;
+}
+/* when unligined */
+.profile.logined{
+    display: none;
+}
+
+.logo-icon { /*для логотпа логина на странице index */
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    display: none;
+}
 hr{
     margin-bottom: 0;
     box-shadow: 1px ;
