--- a/style.css
+++ b/style.css
@@ -18,14 +18,18 @@ header{
     display: none;
 }
 /* when unligined */
-.profile.logined{
+/* .profile.logined{
     display: none;
+} */
+.logo-icon.logined{
+    display: contents;
 }
-
 .logo-icon { /*для логотпа логина на странице index */
     width: 50px;
     height: 50px;
     cursor: pointer;
+}
+#profile{
     display: none;
 }
 hr{
